# macropad-double-control

./: .gitignore  HARDWARE.md  README.md  README_EN.md  README_JP.md  SPEC.md  macropad_detect.py
config-software/: index.html  package.json
config-software/src-tauri/: Cargo.toml
config-software/src-tauri/src/: main.rs
firmware/: code.py
