[package]
name = "macropad-config"
version = "1.0.0"
description = "MacroPad 双控键盘配置工具"
authors = ["GongBu"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serial = "0.24"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
